# slimx

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MULTIMODAL_PLAN.md  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: contributing.md  index.md  quickstart.md
docs/api/: high.md  low.md  providers.md
docs/concepts/: architecture.md  cli.md  high_vs_low.md  image-generation.md  inspectability.md  multimodal.md  openai-compatible.md  parallel.md  plugins.md  provider-capabilities.md  provider-neutral-calls.md  providers.md  slimx-rag.md  streaming.md  structured_output.md  tools.md  types.md  vision.md
examples/: async_stream_openai.py  inspect_and_trace.py  oai_llamacpp.py  oai_lmstudio.py  oai_ollama_v1.py  oai_vllm.py  parallel_all.py  parallel_race.py  quickstart_anthropic.py  quickstart_google.py  quickstart_oai.py  quickstart_ollama.py  quickstart_openai.py  stream_openai.py  tools_openai.py
slimx/: __init__.py  _parallel.py  cli.py  content.py  discovery.py  errors.py  messages.py  record.py  schema.py  tooling.py  types.py
slimx/high/: __init__.py  api.py
slimx/local/: __init__.py  catalog.py  hardware.py  recommend.py
slimx/local/data/: local_models.json
slimx/local/engines/: __init__.py  base.py  ollama.py
slimx/low/: __init__.py  client.py  types.py
slimx/low/providers/: __init__.py
slimx/providers/: __init__.py  _defaults.py  _openai_responses.py  _openai_shape.py  anthropic.py  anthropic_async.py  base.py  google.py  google_async.py  oai.py  oai_async.py  ollama.py  ollama_async.py  openai.py  openai_async.py  plugins.py  registry.py
slimx/utils/: ndjson.py  retry.py  sse.py  sse_async.py
tests/: fakes.py  test_anthropic_provider.py  test_cli.py  test_client_runtime.py  test_coerce.py  test_content.py  test_from_env.py  test_google_provider.py  test_high_api_inputs.py  test_image_generation.py  test_inspectability.py  test_local_cli.py  test_local_engine_ollama.py  test_local_hardware.py  test_local_recommend.py  test_multimodal_providers.py  test_ndjson.py  test_oai_provider.py  test_ollama_provider.py  test_openai_provider.py  test_openai_responses.py  test_parallel.py  test_provider_capabilities.py  test_retry.py  test_schema.py  test_schema_future.py  test_structured_repair.py  test_tooling.py
tests/conformance/: contract.py  test_provider_contract.py
