[project]
name = "slimx"
version = "0.4.1"
description = "A slim, intuitive, lightweight Python library for calling LLMs (high-level + low-level) with multi-provider support."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="SlimX Contributors"}]
keywords = ["llm","openai","anthropic","ollama","tools","streaming","sdk"]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pyright>=1.1.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.entry-points."slimx.providers"]
# Third-party providers should register here.

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slimx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
