[project]
name = "slimx"
version = "0.5.1"
description = "A slim, intuitive, lightweight Python library for calling LLMs (high-level + low-level) with multi-provider support."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name="Amjad Yousef Majid"}]
keywords = ["llm","openai", "gemini","anthropic","ollama","tools","streaming","sdk"]
dependencies = [
  "httpx>=0.27.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pyright>=1.1.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.entry-points."slimx.providers"]
# Third-party providers should register here.

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slimx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"

